--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,17 @@ dependencies {
     implementation'com.airbnb.android:lottie:6.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
 
+    //CameraX.......
+    implementation 'androidx.camera:camera-core:1.2.2'
+    implementation 'androidx.camera:camera-camera2:1.2.2'
+    implementation 'androidx.camera:camera-lifecycle:1.2.2'
+    implementation 'androidx.camera:camera-view:1.2.2'
+
+    //for PickVisualMedia contract
+    implementation "androidx.activity:activity:1.7.0"
+
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
     // koin Dependency Injection
 //    implementation "org.koin:koin-android:3.2.0"
 //    implementation 'org.koin:koin-androidx-viewmodel:3.2.0'
