--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,15 @@ dependencies {
 //    implementation "org.koin:koin-android:3.2.0"
 //    implementation 'org.koin:koin-androidx-viewmodel:3.2.0'
 //    implementation 'org.koin:koin-androidx-scope:3.2.0'
+
+    implementation("com.github.NodeMedia:NodeMediaClient-Android:3.1.16")
+    implementation("com.guolindev.permissionx:permissionx:1.6.1")
+
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.11.0"
+    implementation('io.socket:socket.io-client:2.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
+
 }
 
